--- a/21cm/21cm-presentation.tex
+++ b/21cm/21cm-presentation.tex
@@ -42,8 +42,28 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Doppler Shift Gives Change in 21cm Line Proportional to Velocity}
-  \includegraphics[width=0.75\textwidth]{siren_moving}
+  \frametitle{Location of Hydrogen Masses Determined through Geometry}
+  \begin{columns}
+    \begin{column}{0.4\textwidth}
+  \includegraphics[width=1\textwidth]{geom}
+\end{column}
+\begin{column}{0.6\textwidth}
+  \begin{itemize}
+    \item Velocity we observe is the velocity of the mass \textit{projected} onto our line of sight. 
+    \item $v_{obs} = \frac{\Theta}{r} R_0 \sin \ell - \Theta_0 \sin \ell$
+    \item Relation between $\Theta$ and $r$ obtained through Galactic Rotation Curve.
+  \end{itemize} 
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{SRT Measures Radio Power Within Given Frequency Domain}
+  \includegraphics[width=1\textwidth]{block}
+  \begin{itemize}
+    \item Noise diode allows for calibration of telescope.
+    \item Recceiver selects desired bandwidth for data collection.
+  \end{itemize}
 \end{frame}
 
 \end{document}
